# vsb-university-courses

./: .gitignore  README.md
bia/: .gitignore  Function.py  Report.xlsx  Solution.py  main.py
ks/cv1/: pom.xml
ks/cv1/src/main/java/ks2022/cv1/: App.java  Customer.java  CustomerRepository.java  (+3 more)
ks/du1/: .gitignore  pom.xml
ks/du1/src/main/java/smidl/: Account.java  AccountRepository.java  AccountService.java  App.java  Card.java
ks/du1/src/test/java/smidl/: AppTest.java  PayGatewayTest.java  SeleniumTest.java
pa1/kmeans/: kmeans.cpp
pa1/mean_shift/: main  main.cpp
pa1/mean_shift/main.dSYM/Contents/Resources/DWARF/: main
pa1/names/: names.cpp
pa1/sales/: TravellingSalesmanProblem.cpp  Tsp.cpp  TspBrachPara.cpp  a.out  main  main.cpp  salesman.py
pfp/: decoder.hs  ex1.hs  poker.hs  quicksort.hs
pfp/api/: README.md  api.cabal
pfp/api/app/: Main.hs
pfp/computePi/: CHANGELOG.md  README.md  computePi.cabal  package.yaml  stack.yaml
pfp/du3/: main.py
pfp/first-servant-api/: CHANGELOG.md  README.md  first-servant-api.cabal  package.yaml  stack.yaml
pfp/first-servant-api/.stack-work/: stack.sqlite3
pfp/first-servant-api/src/: Lib.hs
ps/du2/: du2.ipynb
ps/statistics/: .RData  .Rhistory  Cviceni07_skript_EDA_doplnkovy.R  Cviceni10_skript_Testy_hypotez.R  Cviceni11_skript_Testy_hypotez.R  Untitled.R  data_pacienti.xlsx  skript_7_IO_verze2022.R
ps/statistics/du/: .RData  .Rhistory  PS_smi0116_DU_1S.docx  PS_smi0116_DU_2S.docx  du1.R
ps/statistics/du1/: .RData  .Rhistory  data_du1.xlsx  datasheet.xlsx  du1.R
ps/test/: .RData  .Rhistory
(+6 files in other folders)
